--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ color: white;
 display: flex;
 justify-content: space-around;
 padding: 24px 0;
+
 }
 
 .cabecalho-imagem {
@@ -18,5 +19,56 @@ padding: 24px 0;
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
+    font-size: 24px;
 
+}
+.escola-imagem {
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(#424E61,#16CFF8);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
+}
+.estudante{
+    padding: 24px 0;
+}
+.estudante-imagem{
+    width: 120px;
+}
+
+.estudante-icone{
+    width: 24px;
+    padding: 4px 8px;
+}
+
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.rodape{
+    background-color: black;
+    text-align: center;
+}
+
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+   
 }
