--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ padding: 24px 0;
     text-align: center;
     padding: 16px 0;
 }
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+
+}
+
 .estudante-todos{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
@@ -72,3 +78,5 @@ padding: 24px 0;
     padding: 12px 0;
    
 }
+
+
